fix: small warnings in IntelliJ